🚩Fixed Header, overflowing to X

--- a/src/components/header/header.styles.css
+++ b/src/components/header/header.styles.css
@@ -13,7 +13,7 @@
   padding: 0 2rem;
 }
 .nav-list li {
-  margin-left: 2rem;
+  margin:0 1rem;
   
   height: 1rem;
   transition: all .5s;
@@ -36,7 +36,7 @@
   text-decoration: none;
   list-style: none;
   padding: 0 10px;
-  margin-left: 3.5rem;
+  margin-left: 2rem;
   max-width: 100%;
 }
 
